# belajar-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: main.rs
