[package]
name = "belajar-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.10.0"
dotenv_codegen = "0.15.0"
tokio = "1.23.0"
serde_json = "1.0.91"
twilight-gateway = "0.14.0"
twilight-model = "0.14.0"
anyhow = "1.0.68"
twilight-cache-inmemory = "0.14.0"
once_cell = "1.17.0"