[package]
name = "belajar-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = "1.38.1"
serde_json = "1.0.120"
anyhow = "1.0.86"
once_cell = "1.19.0"